--- a/Shubham Housing Price Prediction ( Linear Regression).ipynb
+++ b/Shubham Housing Price Prediction ( Linear Regression).ipynb
@@ -21,7 +21,7 @@
     "\n",
     "\n",
     "\n",
-    "**This is Multiple Linear Regression problem.**"
+    "**This is Multivariable Linear Regression problem.**"
    ]
   },
   {
